# Drone-from-A-to-Z

./: .clangd  PD_I_AUTO.py  README.md  plot_heart_from_log.py  plot_heart_trajectory.py  plot_uav_attitude_combined.gp  plot_uav_control.gp  uav  uav.world
Qt_controlUAV/: Makefile  Qt_controlUAV  Qt_controlUAV.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
build-Qt_controlUAV-Desktop-Debug/: Makefile  Qt_controlUAV  moc_mainwindow.cpp  ui_mainwindow.h
models/robot/: model.config  robot.sdf
models/uav/: UAV_cocanh.stl  model.config  uav.dae  uav.sdf
uav_plugin/: CMakeLists.txt  KrenCtrl.cpp  KrenCtrl.hpp  KrenMdl.cpp  RandomRobotPlugin.cpp  UavPlugin.cpp  cli.cpp  control.ino  imu.h  lowpass_filter.h  pid.h  quaternion.h  rc_sim_all.hpp  vector.h
uav_plugin/.cache/clangd/index/: KrenCtrl.cpp.CECDD49A2B201BE0.idx  KrenCtrl.hpp.27F34ECA6173A525.idx  KrenMdl.cpp.C417E0D270FA480F.idx  KrenMdl.hpp.3EF5C64D8B5C85C1.idx  RandomRobotPlugin.cpp.CD546D8B2AFA82C6.idx  UavPlugin.cpp.6BFE4B38B11BB6D7.idx  cli.cpp.8CDA7B3B81747D1E.idx  control.ino.79A95D13C1AE3570.idx  imu.h.5F6FB12021690658.idx  lowpass_filter.h.6507F655B806F454.idx  pid.h.8BDCFB05A7F15595.idx  quaternion.h.EF9E83860E8E1063.idx  rc_sim_all.hpp.A7485327CE9E687D.idx  vector.h.6A4EC3282C5E28FC.idx
